--- a/oddcalc.html
+++ b/oddcalc.html
@@ -9,22 +9,26 @@
 var insert = prompt ("Give me a number");
 var insert2 = prompt ("Give me another number");
 var insert3 = prompt ("What kind of operation do you want?");
-if (insert + insert2 === "mult");
- console.log (insert * insert2);
-if (insert + insert2 === "div");
- console.log (insert / insert2);
- if (insert + insert2 === "mod");
+if (insert3 === "mult")
+{
+  console.log (insert * insert2);
+}
+else if(insert3 === "div")
+{
+console.log (insert / insert2);
+}
+else if(insert3 === "mod")
+{
   console.log (insert % insert2);
-  
+}
+ else
+ {
+console.log (" *** invalid operation *** ")
+   }
+{
+}
 
 
-
-
-
-
-
-
-
-   </script>
+  </script>
  </body>
 </html>
