--- a/cake.html
+++ b/cake.html
@@ -9,7 +9,7 @@
       var answer = prompt("Do you want cake?");
       if (answer === "Yes") {
         console.log("Have some cake.");
-      } else if (answer === "No"); {
+      } else if (answer === "No") {
         console.log ("No cake for you");
       } else {
         console.log("Sorry, I don't understand you, Idiot");
